<resources>
    <string name="app_name">ImageflightToDo</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>


    <string name="enter_item">Title</string>

    <string name="hint_item">Title</string>

    <string name="hint_qty">Description</string>

    <string name="hint_color">Click to pick the due date</string>

    <string name="hint_size">Enter user email</string>

    <string name="save_button">Save</string>

    <string name="sure_text">Are you sure?</string>

    <string name="no_text">no</string>

    <string name="yes_text">yes</string>

    <string name="edit_time">Edit Item</string>

    <string name="update_text">Update</string>
    <string name="title_activity_project_list2">ProjectList2</string>
</resources>
