<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/itemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_item" />

            <EditText
                android:id="@+id/itemDescription"
                android:inputType="number"
                android:layout_below="@id/itemTitle"
                android:layout_width="match_parent"
                android:hint="@string/hint_qty"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/itemDate"
                android:layout_below="@id/itemAssignmentSpinner"
                android:layout_width="match_parent"
                android:hint="@string/hint_color"
                android:textSize="24sp"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/itemAssignmentSpinner"
                android:layout_below="@id/itemDescription"
                android:inputType="number"
                android:layout_width="match_parent"
                android:hint="@string/hint_size"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/saveItemButton"
                android:layout_below="@id/itemDate"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>