<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/itemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"

                android:layout_marginTop="4dp"
                android:hint="@string/hint_item" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linLaySearchUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/itemTitle"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/itemAssignmentEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/hint_size"
                    android:inputType="text|textEmailAddress"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_button"
                    android:text="SEARCH"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <ListView
                android:id="@+id/ListViewAddedUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linLaySearchUser"
                >

            </ListView>

            <Button
                android:id="@+id/saveItemButton"
                android:layout_below="@id/ListViewAddedUsers"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>